# designpatterns

commandpattern/: CMakeLists.txt  command.cpp  command.h  concretecommand.cpp  concretecommand.h  invoker.cpp  invoker.h  main.cpp  receiver.cpp  receiver.h
